k8s/auth/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: taskify
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: sohamdalvi1011/taskify-auth:v0.0.6  # Update with your image
        ports:
        - containerPort: 3000
