k8s/auth/auth-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: auth-gateway
  namespace: taskify   # put in same namespace as your service
spec:
  selector:
    istio: ingressgateway   # use Istio’s ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "taskify.192.168.1.245.nip.io"
